# challenge-aido1_LF1-baseline-duckietown

./: Dockerfile  lf_slim.launch
my_dagu_car/: CMakeLists.txt  package.xml
my_dagu_car/launch/: inverse_kinematics_node.launch
my_dagu_car/src/: inverse_kinematics_node.py
my_lane_control/: CMakeLists.txt  package.xml
my_lane_control/launch/: lane_controller_node.launch
my_lane_control/scripts/: lane_controller_node.py
my_lane_filter/: package.xml
my_lane_filter/include/lane_filter/: lane_filter.py
my_lane_filter/launch/: lane_filter_node.launch
my_line_detector/: CMakeLists.txt  package.xml
my_line_detector/include/line_detector/: line_detector1.py
my_line_detector/include/line_detector/config/: baseline.line_detector.yaml
my_line_detector/launch/: line_detector_node.launch
my_line_detector/src/: line_detector_node.py
