<?xml version="1.0"?>
<package>
  <name>my_dagu_car</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `my_dagu_car` in `package.xml`.</description>

   <author email="vincent.mai@umontreal.ca">Vincent Mai</author>
   <author email="yershov@mit.edu">Dmitry Yershov</author>
  <author email="syliu@mit.edu">Shih-Yuan Liu</author>
  
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>adafruit_drivers</build_depend>
  <build_depend>pkg_name</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>adafruit_drivers</run_depend>
  <run_depend>pkg_name</run_depend>


</package>
